--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 
 #user  nobody;
 worker_processes  1;
-daemon off;
+# daemon off;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -42,7 +42,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   html;
+            root  html;
             index index.html;
             # proxy_pass http://192.168.1.235:8080;
         }
