--- a/nginx.conf
+++ b/nginx.conf
@@ -42,7 +42,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root  html;
+            root  /usr/share/nginx/html;
             index index.html;
             # proxy_pass http://192.168.1.235:8080;
         }
@@ -50,13 +50,13 @@ http {
         location ^~ /pomegranate {
             # root   html;
             # index  index.html index.htm;
-            proxy_pass http://localhost:9001;
+            proxy_pass http://www.huili.cool:9001;
         }
 
         location ^~ /shop {
             #root   html;
             #index  index.html index.htm;
-            proxy_pass http://localhost:9002;
+            proxy_pass http://www.huili.cool:9002;
         }
 
         #error_page  404              /404.html;
