html 文件夹由数据卷指定，开启GZIP doc 9003 blog 9002

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,7 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
 
     server {
         listen       80;
@@ -53,17 +53,23 @@ http {
             proxy_pass http://www.huili.cool:9001;
         }
 
-        location ^~ /shop {
+        location ^~ /blog {
             #root   html;
             #index  index.html index.htm;
             proxy_pass http://www.huili.cool:9002;
+        }
+
+        location ^~ /doc {
+            #root   html;
+            #index  index.html index.htm;
+            proxy_pass http://www.huili.cool:9003;
         }
 
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
         #
-        error_page   500 502 503 504  /50x.html;
+        error_page  404 500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
         }
