添加leaflet-socket 的proxy代理：7900

--- a/nginx.conf
+++ b/nginx.conf
@@ -86,6 +86,12 @@ http {
             proxy_pass http://www.huili.cool:9003;
         }
 
+        location ^~ /moving-marker {
+            #root   html;
+            #index  index.html index.htm;
+            proxy_pass http://www.huili.cool:7900;
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
