--- a/nginx.conf
+++ b/nginx.conf
@@ -86,7 +86,7 @@ http {
             proxy_pass http://www.huili.cool:9003;
         }
 
-        location ^~ /moving-marker {
+        location ^~ /marker {
             #root   html;
             #index  index.html index.htm;
             proxy_pass http://www.huili.cool:7900;
